--- a/costs.html
+++ b/costs.html
@@ -2,12 +2,12 @@
 <html lang="en" class="wide wow-animation smoothscroll scrollTo">
   <head>
     <!-- Site Title-->
-    <title>Visage plastic surgery</title>
+    <title>Morela plastic surgery</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="keywords" content="Visage design multipurpose template">
+    <meta name="keywords" content="Morela design multipurpose template">
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
@@ -75,13 +75,13 @@
                       </li>
                       <li><a href="services.html"><span>Procedures</span></a>
                       <ul class="rd-navbar-dropdown">
-                          <li><a href="procedure.html"><span class="text-middle">Dr John Doe</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Facelift</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Cristina Bozas</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Tummy Tuck</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Christian Portland</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Breast Augmentation</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Kent</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
                         </ul>
                       </li>
@@ -117,7 +117,7 @@
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
                   <h2>Costs</h2>
                   <h3>Lorem ipsum dolor sit amet</h3>
-                  <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
+                  <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
               </div>
               <div class="row offset-top-60">
@@ -148,7 +148,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Facelift |<span class="cost-subtitle"> Extended SMAS (deep plane)</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="liposuction"></a>
@@ -159,7 +159,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Liposuction |<span class="cost-subtitle"> Three Areas</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="tummy-tuck"></a>
@@ -170,7 +170,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Pariareolar Breast Lift |<span class="cost-subtitle"> With Saline Augmentation</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>   
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="breast-augmentation"></a>
@@ -181,7 +181,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Correction of Tubular Breast Deformity |<span class="cost-subtitle"> Saline implants</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>    
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="breast-reduction"></a>
@@ -192,7 +192,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Pariareolar Breast Lift |<span class="cost-subtitle"> With Saline Augmentation</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>    
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="breast-reconstruction"></a>
@@ -203,7 +203,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Correction of Tubular Breast Deformity |<span class="cost-subtitle"> Saline implants</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="rhinoplasty"></a>
@@ -214,7 +214,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Facelift |<span class="cost-subtitle"> Extended SMAS (deep plane)</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>
                     <div class="col-md-12 offset-top-20 lighttransparent">
                        <a class="anchor" id="labiaplasty"></a>
@@ -225,7 +225,7 @@
                        <p class="offset-top-10">$5,655 - $7,324</p>
                        <h6 class="text-left offset-top-30">Facelift |<span class="cost-subtitle"> Extended SMAS (deep plane)</span></h6>
                        <p class="offset-top-10">$6,745 - $6,678</p>
-                       <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                       <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                     </div>                    
                   </div>
                   <div class="cell-xs-10 cell-md-4 col-md-4">
