--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="keywords" content="Visage design multipurpose template">
+    <meta name="keywords" content="Morela design multipurpose template">
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
@@ -75,13 +75,13 @@
                       </li>
                       <li><a href="services.html"><span>Procedures</span></a>
                       <ul class="rd-navbar-dropdown">
-                          <li><a href="procedure.html"><span class="text-middle">Dr John Doe</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Facelift</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Cristina Bozas</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Tummy Tuck</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Christian Portland</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Breast Augmentation</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Kent</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
                         </ul>
                       </li>
@@ -117,7 +117,7 @@
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
                   <h2>About Us</h2>
                   <h3>Lorem ipsum dolor sit amet</h3>
-                  <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
+                  <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
               </div>
               <div class="row offset-top-60">
@@ -133,7 +133,7 @@
                           <li>Inceptos Quam</li>
                           <li>Orci Enim</li>
                         </ul>
-                        <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                        <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
                     </div>     
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">Our History</h5>
@@ -153,7 +153,7 @@
                       <h5><a href="procedure.html">Rhinoplasty</a></h5>
                       <h5><a href="procedure.html">Buttock Enhancement</a></h5>
                       <h5><a href="procedure.html">Labiaplasty</a></h5>
-                      <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                      <div class="offset-top-20"><a href="services.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                     </div>
                     <div class="darktransparent offset-top-20">
                       <h5>Meet your Doctor</h5>
@@ -209,7 +209,7 @@
                       <li>Inceptos Quam</li>
                       <li>Orci Enim</li>
                     </ul>
-                    <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                    <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
                 <div class="col-md-4 offset-top-30">
@@ -224,7 +224,7 @@
                       <li>Inceptos Quam</li>
                       <li>Orci Enim</li>
                     </ul>
-                    <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                    <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
                 <div class="col-md-4 offset-top-30">
@@ -239,7 +239,7 @@
                       <li>Inceptos Quam</li>
                       <li>Orci Enim</li>
                     </ul>
-                    <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                    <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
               </div>
