--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="keywords" content="Visage design multipurpose template">
+    <meta name="keywords" content="Morela design multipurpose template">
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
@@ -75,13 +75,13 @@
                       </li>
                       <li><a href="services.html"><span>Procedures</span></a>
                       <ul class="rd-navbar-dropdown">
-                          <li><a href="procedure.html"><span class="text-middle">Dr John Doe</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Facelift</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Cristina Bozas</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Tummy Tuck</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Christian Portland</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Breast Augmentation</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Kent</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
                         </ul>
                       </li>
@@ -119,7 +119,7 @@
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
                   <h2><span style="margin-right:70px;">Feel good in</span><br><span style="color:#73308b;"> your own skin</span></h2>
                   <p class="offset-top-30"><b>Get the body you dreamed of</b></p>
-                  <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                  <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
                 </div>
               </div>
               <div class="row offset-top-60">
@@ -134,7 +134,7 @@
                           <li>Inceptos Quam</li>
                           <li>Orci Enim</li>
                         </ul>
-                        <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                        <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
                     </div>     
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">What We Can Do For You</h5>
@@ -231,7 +231,7 @@
                          <!-- /.control-box -->                          
                           </div><!-- /#myCarousel -->
                         </div>
-                      <div class="offset-top-0 slideshowbtn"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
+                      <div class="offset-top-0 slideshowbtn"><a href="contacts.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
                     </div>
                   </div>
                   <div class="cell-xs-10 cell-md-4 col-md-4">
@@ -298,7 +298,7 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
                 <div class="col-md-12 offset-top-60 shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
                    <h5 style="font-weight:500;">Breast Augmentation</h5>
                    <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
-                   <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                   <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                 </div>
               </div>
             </div>
