--- a/procedure.html
+++ b/procedure.html
@@ -2,12 +2,12 @@
 <html lang="en" class="wide wow-animation smoothscroll scrollTo">
   <head>
     <!-- Site Title-->
-    <title>Visage plastic surgery</title>
+    <title>Morela plastic surgery</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="keywords" content="Visage design multipurpose template">
+    <meta name="keywords" content="Morela design multipurpose template">
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
@@ -75,13 +75,13 @@
                       </li>
                       <li class="active"><a href="services.html"><span>Procedures</span></a>
                       <ul class="rd-navbar-dropdown">
-                          <li><a href="procedure.html"><span class="text-middle">Dr John Doe</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Facelift</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Cristina Bozas</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Tummy Tuck</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Christian Portland</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Breast Augmentation</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Kent</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
                         </ul>
                       </li>
@@ -119,7 +119,7 @@
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
                   <h2>Procedures</h2>
                   <h3>Facelift</h3>
-                  <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
+                  <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
               </div>
               <div class="row offset-top-60">
@@ -127,11 +127,7 @@
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">Facelift</h5>
                       <div class="offset-top-30"><img src="images/blog/post-12-770x480.jpg" width="750" height="470" alt="" class="img-responsive center-block"></div>
-                      <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.<br><br></p>
-                    </div>     
-                    <div class="lighttransparent offset-top-20">
-                      <h5 class="text-primary">What We Can Do For You</h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                      <p class="offset-top-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                       <script>
                       $(document).ready(function() {
                           $('.carousel').carousel({
@@ -143,30 +139,6 @@
                         <div class="carousel slide" id="myCarousel">
                             <div class="carousel-inner">
                                 <div class="item active">
-                                  <ul class="thumbnails">
-                                    <li class="col-sm-6 thumbnailcol">
-                                      <div class="fff">
-                                        <div class="thumbnail">
-                                          <img src="images/gallery/before.jpg" alt="">
-                                        </div>
-                                        <div class="caption">
-                                          <h4>Before</h4>
-                                        </div>
-                                      </div>
-                                    </li>
-                                    <li class="col-sm-6 thumbnailcol">
-                                      <div class="fff">
-                                        <div class="thumbnail">
-                                          <img src="images/gallery/after.jpg" alt="">
-                                        </div>
-                                        <div class="caption">
-                                          <h4>After</h4>
-                                        </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div><!-- /Slide1 --> 
-                                <div class="item">
                                   <ul class="thumbnails">
                                     <li class="col-sm-6 thumbnailcol">
                                       <div class="fff">
@@ -224,8 +196,8 @@
                          <!-- /.control-box -->                          
                           </div><!-- /#myCarousel -->
                         </div>
-                      <div class="offset-top-0 slideshowbtn"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
-                    </div>
+                      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.<br><br></p>
+                    </div>     
                   </div>
                   <div class="cell-xs-10 cell-md-4 col-md-4">
                     <div class="darktransparent offset-top-20">
@@ -284,13 +256,13 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.<br>
 Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan.</p>
                   <div class="offset-top-20">
-                    <h6><a href="">Read More »</a></h6>
+                    <h6><a href="team-member.html">Read More »</a></h6>
                   </div>
                 </div>
                 <div class="col-md-12 offset-top-60 shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
                    <h5 style="font-weight:500;">Breast Augmentation</h5>
                    <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
-                   <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                   <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                 </div>
               </div>
             </div>
