--- a/team-member.html
+++ b/team-member.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation smoothscroll scrollTo">
   <head>
     <!-- Site Title-->
-    <title>Visage plastic surgery</title>
+    <title>Morela plastic surgery</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -75,13 +75,13 @@
                       </li>
                       <li><a href="services.html"><span>Procedures</span></a>
                       <ul class="rd-navbar-dropdown">
-                          <li><a href="procedure.html"><span class="text-middle">Dr John Doe</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Facelift</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Cristina Bozas</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Tummy Tuck</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Christian Portland</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Breast Augmentation</span></a>
                           </li>
-                          <li><a href="procedure.html"><span class="text-middle">Dr Kent</span></a>
+                          <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
                         </ul>
                       </li>
@@ -117,7 +117,7 @@
                   <h2>Ricky Baker</h2>
                   <h3 style="margin-bottom: 16px;">CMO, Pastic Surgeon</h3>
                   <h6 style="margin-bottom: 30px; color:#b988b9;">Perelman School of Medicine at the University of Pennsylvania (1987)</h6>
-                  <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
+                  <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
               </div>
               <div class="row offset-top-60">
@@ -125,7 +125,7 @@
                     <div class="inset-md-right-20 offset-top-20 darktransparent">
                       <img src="images/users/user-scott-riley-320x320.jpg" alt="" class="img-responsive"/>
                       <div class="member-block-body offset-top-20">
-                        <a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">make an appointment</a>
+                        <a href="contacts.html" class="btn btn-ellipse btn-primary">make an appointment</a>
                         <div class="offset-top-20">
                           <a href="callto:1-800-1234-567" class="text-middle reveal-inline-block text-white">1-800-1234-567</a>
                         </div>
@@ -236,7 +236,7 @@
                     <section class="post-content text-left">
                       <!-- Post Title-->
                       <div class="post-title offset-top-8">
-                        <h4 class="text-bold"><a href="single-post.html">How to manage and prevent age spots this summer</a></h4>
+                        <h4 class="text-bold"><a href="#">How to manage and prevent age spots this summer</a></h4>
                       </div>
                       <ul class="list-inline list-inline-dashed">
                         <li>June 21, 2016</li>
@@ -263,7 +263,7 @@
                     <section class="post-content text-left">
                       <!-- Post Title-->
                       <div class="post-title offset-top-8">
-                        <h4 class="text-bold"><a href="single-post.html">Why laser skin rejuvenation needs to be on your to-do list</a></h4>
+                        <h4 class="text-bold"><a href="s#.html">Why laser skin rejuvenation needs to be on your to-do list</a></h4>
                       </div>
                       <ul class="list-inline list-inline-dashed">
                         <li>June 21, 2016</li>
@@ -290,7 +290,7 @@
                     <section class="post-content text-left">
                       <!-- Post Title-->
                       <div class="post-title offset-top-8">
-                        <h4 class="text-bold"><a href="single-post.html">Dr. Scott Riley on Plastic Surgery Services For Men</a></h4>
+                        <h4 class="text-bold"><a href="#">Dr. Scott Riley on Plastic Surgery Services For Men</a></h4>
                       </div>
                       <ul class="list-inline list-inline-dashed">
                         <li>June 21, 2016</li>
@@ -307,7 +307,7 @@
                     </section>
                   </article>
                 </div>
-              </div><a href="blog-masonry.html" class="btn btn-ellipse btn-primary offset-top-41 offset-md-top-60">view all Articles</a>
+              </div><a href="#" class="btn btn-ellipse btn-primary offset-top-41 offset-md-top-60">view all Articles</a>
             </div>
           </div>
         </section>
